--- a/config/database.yml
+++ b/config/database.yml
@@ -10,12 +10,12 @@
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 #
 default: &default
-  adapter: postgresql
-  encoding: unicode
+  adapter: mysql2
+  encoding: utf8
   pool: 5
-#  username: root
-#  password: root
-#  socket: /var/run/mysqld/mysqld.sock
+  username: root
+  password: root
+  socket: /var/run/mysqld/mysqld.sock
 
 development:
   <<: *default
@@ -49,7 +49,7 @@ test:
 #
 production:
   <<: *default
-  adapter:
+  adapter:  postgresql
   database: Todo_production
   username: Todo
   password: <%= ENV['TODO_DATABASE_PASSWORD'] %>
