--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -20,3 +20,5 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  sendgrid_username: dorje64
+   sendgrid_password: asdfworld1
