--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -19,6 +19,6 @@ test:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
-  ssecret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
 #  sendgrid_username: dorje64
 #  sendgrid_password: asdfworld1
